# collatz-convergent-classes

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
python/: 31_43_best_fit.py  A047749.py  A047749_vs_A186009_even.py  A047749_vs_A186009_odd.py  Cn_vs_Bk.py  Term_Group_Coverage.py  Term_Group_Ratios.py  best_fit_31_43.py  d_dm2_ln_A047749.py  d_dm_ln_A047749.py  figure_utils.py  generate_all_figures.py  term_brackets.py
src/: Collatz_Anti_Cyclicity.tex
src/cpp/: ENVIRONMENT.md  INSTALL.md  README.md  btree.cpp  btree.hpp  common.hpp  data_gen.cpp  main.cpp  menu.cpp  oeis.cpp  oeis.hpp  path.cpp  path.hpp  safe_arith.hpp
src/latex/: Asymptotic_Density_of_Convergent_Classes.tex  Collatz_Anti_Cyclicity.tex  Collatz_Density_One_Descent.tex  Density_One_Descent.tex  Global_Descent_Convergent_Classes.tex  Natural_Density_of_Convergent_Cylinders.tex  references.bib
src/python/: A047749.py  A047749_vs_A186009_even.py  A047749_vs_A186009_odd.py  Cn_vs_Bk.py  best_fit_31_43.py  d_dm2_ln_A047749.py  d_dm_ln_A047749.py  figure_utils.py  generate_all_figures.py  term_brackets.py  term_group_ratios.py
